[project]
name = "cyphera"
version = "0.1.0"
description = "Data obfuscation SDK — FPE, AES, masking, hashing"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["cryptography>=41.0"]

[project.urls]
Repository = "https://github.com/cyphera-labs/cyphera-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
