[project]
name = "cyphera"
version = "0.0.1a3"
description = "Data protection SDK — format-preserving encryption (FF1/FF3), AES-GCM, data masking, and hashing."
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["cryptography>=41.0"]
authors = [
    { name = "Leslie Gutschow", email = "leslie.gutschow@horizondigital.dev" },
]
keywords = ["encryption", "fpe", "format-preserving", "data-protection", "masking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://cyphera.io"
Repository = "https://github.com/cyphera-labs/cyphera-python"
Issues = "https://github.com/cyphera-labs/cyphera-python/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
